<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:padding="@dimen/interface_padding">

    <ImageView
        android:id="@+id/img_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_last_name"
        style="@style/edt_text"
        app:layout_constraintTop_toBottomOf="@id/img_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hint_last_name">
    </com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_first_name"
        style="@style/edt_text"
        app:layout_constraintTop_toBottomOf="@id/edt_last_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hint_first_name">
    </com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_email"
        style="@style/edt_text"
        app:layout_constraintTop_toBottomOf="@id/edt_first_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hint_mail">
    </com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_password"
        style="@style/edt_text"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hint_password"
        android:inputType="textPassword">
    </com.google.android.material.textfield.TextInputEditText>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edt_confirm_password"
        style="@style/edt_text"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword">
    </com.google.android.material.textfield.TextInputEditText>
    <CheckBox
        android:id="@+id/chk_cgu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accepter CGU"
        android:textColor="@color/purple_200"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        style="@style/submit_button"
        app:layout_constraintTop_toBottomOf="@id/chk_cgu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/Submit">
    </com.google.android.material.button.MaterialButton>
</androidx.constraintlayout.widget.ConstraintLayout>