<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/interface_padding"
    android:layout_gravity="center"
    tools:context=".ColorActivity">

    <TextView
        android:id="@+id/res"
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/text_size">
    </TextView>
    <LinearLayout
        android:id="@+id/color"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/green"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/ET_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/res"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/ET_margin_top">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn1"
            android:text="@string/red"
            style="@style/color_button"
            android:backgroundTint="@color/gray">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn2"
            android:text="@string/blue"
            style="@style/color_button"
            android:backgroundTint="@color/gray">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn3"
            android:text="@string/green"
            style="@style/color_button"
            android:backgroundTint="@color/gray">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>